[gd_scene load_steps=4 format=3 uid="uid://bjbj6jyrap7pc"]

[ext_resource type="PackedScene" uid="uid://bo0v54ggqcbod" path="res://prefabs/base_counter.tscn" id="1_p83t2"]
[ext_resource type="Script" path="res://scripts/clear_counter.gd" id="1_ql324"]
[ext_resource type="PackedScene" uid="uid://d0rsth30uggpm" path="res://Assets/_Assets/PrefabsVisuals/CountersVisuals/ClearCounter_Visual.prefab.tscn" id="2_xwu05"]

[node name="ClearCounter" type="Node3D"]

[node name="BaseCounter" parent="." instance=ExtResource("1_p83t2")]
collision_layer = 2
script = ExtResource("1_ql324")

[node name="ClearCounter_Visual" parent="." instance=ExtResource("2_xwu05")]
